core-services/weave-dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weave-dashboard-ingress
  namespace: flux-system
spec:
  tls:
    - hosts:
        - weave.totorinho.duckdns.org
      secretName: duckdns-wildcard-cert-totorinho.duckdns.org
  rules:
    - host: weave.totorinho.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weave-dashboard-weave-gitops
                port:
                  number: 9001
